--- a/angular-app/src/app/authentication/authentication.component.html
+++ b/angular-app/src/app/authentication/authentication.component.html
@@ -1,12 +1,12 @@
 <div class="row">
-    <div class="col-xs-12 col-md-6 col-md-offset-4">
+    <div class="col-xs-12 col-md-6 col-md-offset-5">
         <!-- <div class="alert alert-danger" *ngIf = "error">
             <p>
                 {{ error }}
             </p>
         </div> -->
         <app-alert [message] = "error" *ngIf = "error!=null" (close) = onHandleError()></app-alert>
-        <div *ngIf = "isLoading" style="text-align: center;">
+        <div *ngIf = "isLoading">
             <app-loading-spinner></app-loading-spinner>
         </div>
         <form (ngSubmit) = onSubmit(f) #f = "ngForm" *ngIf = "!isLoading">
