--- a/angular-app/src/app/shopping-list/shopping-list.component.html
+++ b/angular-app/src/app/shopping-list/shopping-list.component.html
@@ -9,7 +9,7 @@
         </a>
         <div *ngIf = "ingrediants.length!=0">
         <hr>
-        <button (click)="onPayment()" class="btn btn-primary">Pay using Paytm</button>
+        <button (click)="onPayment()" class="btn btn-primary" style="margin-bottom: 30px;">Pay using Paytm</button>
         </div>
     </div> 
 </div>
