--- a/angular-app/src/app/paymentinfo/paymentinfo.component.html
+++ b/angular-app/src/app/paymentinfo/paymentinfo.component.html
@@ -1,5 +1,5 @@
 <div>
-    <div *ngIf = "STATUS == 'TXN_FAILURE'">
+    <div *ngIf = "STATUS && STATUS != 'TXN_SUCCESS'">
         <h3>
             Status: {{STATUS}}
         </h3>
